--- a/Exo2/index.html
+++ b/Exo2/index.html
@@ -33,7 +33,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="randomContainer">
             <button onclick="return getRandom()" class="buttonRandom">Get Random from Names</button>
             <div class="displayedRandomName"></div>
         </article>
